tests/codegen/errors/reader/special-forms/atom.reader.error.reader.cond.clause.not.bracketed/reader-cond-clause-not-bracketed.mon
;; TEST-ID: tests.codegen.reader-error.reader-cond-clause-not-bracketed
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/special-forms
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: 'cond' clauses must use bracket syntax [test body...]
;; TEST-ATOM: atom.reader.error.reader.cond.clause.not.bracketed
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.cond.clause.not.bracketed
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: 'cond' clauses must use bracket syntax [test body...]
;; TEST-READER-PATH: reader.c:2948 parser.cond
;; TEST-CODEGEN-PATH: diagnostic.parser.cond
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:2948 'cond' clauses must use bracket syntax [test body...]
;; TEST-USES-ATOM: atom.reader.error.reader.cond.clause.not.bracketed
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.cond
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/special-forms/atom.reader.error.reader.cond.clause.not.bracketed
;; TEST-MENU-PATH: codegen/errors/reader/special-forms/atom.reader.error.reader.cond.clause.not.bracketed
;; TEST-ATOM-LEAF: atom.reader.error.reader.cond.clause.not.bracketed
;; TEST-CLI-TARGET: codegen errors reader special-forms

(module Main)
(cond True)
